deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odc-poc
  labels:
    app: odc-poc
spec:
  type: ClusterIP
  selector:
    app: odc-poc
  ports:
    - name: http
      port: 80
      targetPort: 3000
